@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model US10


class StoreManager

class Order{
    clientEmail
    orderAmount
}

class Property{
    area
    cityCenterDistance
    price
}

StoreManager "1" -- "1.*" Order: displays >

Property "1" -- "1" Order : contains <

@enduml